<?xml version="1.0"?>
<package format="2">
  <name>carmen_control</name>
  <version>0.0.1</version>
  <description>The carmen_control package</description>

  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>

  <author>Andriy Petlovanyy</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>realtime_tools</depend> 
  <depend>roscpp</depend> 
  <depend>hardware_interface</depend> 
  <depend>pluginlib</depend> 
  <depend>controller_interface</depend> 
  <depend>sensor_msgs</depend> 

  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/range_sensor_plugin.xml"/>
  </export>  
</package>
