<?xml version="1.0"?>
<package format="2">
  <name>carmen_description</name>
  <version>0.0.1</version>
  <description>The carmen_description package</description>

  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>
  <author>Andriy Petlovanyy</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>rqt_tf_tree</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

</package>
