<?xml version="1.0"?>
<package format="2">
  <name>carmen_gazebo</name>
  <version>0.0.1</version>
  <description>The carmen_gazebo package</description>

  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>
  <author>Andriy Petlovanyy</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>carmen_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
