<?xml version="1.0"?>
<package format="2">
  <name>carmen_hardware</name>
  <version>0.0.1</version>
  <description>The carmen_hardware package</description>

  <maintainer email="Andriy.Petlovanyy@todo.todo">Andriy Petlovanyy</maintainer>
  <author>Andriy Petlovanyy</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>carmen_msgs</depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>rosserial_mbed</exec_depend>
</package>
